# scheduleo-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: db.py  main.py  settings.py
app/auth/: models.py  router.py  service.py
src/: main.py
